bugfix_gapp

--- a/src/components/admin/admin.scss
+++ b/src/components/admin/admin.scss
@@ -22,4 +22,10 @@
         }
     }
 }
+.form-group > label {
+    margin-bottom: 10px;
+}
+.form-control {
+    border-radius: 0px !important;
+}
 
